typescript/checker/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts.stderr
error: TS2365 {
    span: Span {
        lo: BytePos(
            293,
        ),
        hi: BytePos(
            306,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts:15:10
   |
15 | var r3 = undefined + b;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            317,
        ),
        hi: BytePos(
            330,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts:16:10
   |
16 | var r4 = undefined + 1;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            341,
        ),
        hi: BytePos(
            354,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts:17:10
   |
17 | var r5 = undefined + c;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            365,
        ),
        hi: BytePos(
            380,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts:18:10
   |
18 | var r6 = undefined + E.a;
   |          ^^^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            391,
        ),
        hi: BytePos(
            409,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts:19:10
   |
19 | var r7 = undefined + E['a'];
   |          ^^^^^^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            420,
        ),
        hi: BytePos(
            433,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts:20:10
   |
20 | var r8 = b + undefined;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            444,
        ),
        hi: BytePos(
            457,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts:21:10
   |
21 | var r9 = 1 + undefined;
   |          ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            469,
        ),
        hi: BytePos(
            482,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts:22:11
   |
22 | var r10 = c + undefined
   |           ^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            493,
        ),
        hi: BytePos(
            508,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts:23:11
   |
23 | var r11 = E.a + undefined;
   |           ^^^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            520,
        ),
        hi: BytePos(
            538,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndValidOperator.ts:24:11
   |
24 | var r12 = E['a'] + undefined;
   |           ^^^^^^^^^^^^^^^^^^

